finish header section

--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,39 @@ ul {
 a {
     text-decoration: none;
 }
+
+/* navbar styling start */ 
+#nav-bar {
+    width: 100%;
+    background-color: var(--white);
+    position: fixed;
+    left: 0;
+    top: 0;
+    transition: all 0.3s ease-out;
+}
+#nav-bar .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 14rem;
+}
+.menu li {
+    display: inline-block;
+}
+.menu li a {
+    color: var(--grayish-blue);
+    margin-right: 1rem;
+}
+.menu-btn {
+    cursor: pointer;
+    display: none;
+}
+.request-btn {
+    padding: 1rem 2rem;
+    color: var(--white);
+    background: linear-gradient(90deg, var(--lime-green), var(--bright-cyan));
+    border-radius: 2rem;
+    text-transform: capitalize;
+    font-weight: 700;
+}
