--- a/css/style.css
+++ b/css/style.css
@@ -147,3 +147,53 @@ a {
     color: var(--grayish-blue);
     font-size: 1.3rem;
 }
+
+/* blog section styling */
+.blog-section {
+    background-color: var(--very-light-gray);
+    padding: 8rem 0rem;
+}
+.blog-section h2 {
+    color: var(--dark-blue);
+    font-size: 3rem;
+    font-weight: 400;
+    margin-bottom: 5rem;
+    padding: 0 10rem;
+}
+.blogs {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0rem 7rem
+}
+.blog {
+    width: 22%;
+    margin-right: 1.5rem;
+    background-color: var(--white);
+    border-radius: 1rem;
+}
+.blog img {
+    width: 100%;
+    height: 70%;
+    border-top-right-radius: 1rem;
+    border-top-left-radius: 1rem;
+    object-fit: cover;
+}
+.blog-text {
+    padding: 1rem;
+}
+.blog-text cite {
+    font-style: normal;
+    color: var(--grayish-blue);
+}
+.blog-text h3 {
+    margin: 1rem 0rem;
+    font-size: 1.5rem;
+    color: var(--dark-blue);
+    font-weight: 700;
+}
+.blog-text p {
+    color: var(--grayish-blue);
+}
+
