--- a/css/style.css
+++ b/css/style.css
@@ -151,25 +151,22 @@ a {
 /* blog section styling */
 .blog-section {
     background-color: var(--very-light-gray);
-    padding: 8rem 0rem;
+    padding: 8rem 10rem;
 }
 .blog-section h2 {
     color: var(--dark-blue);
     font-size: 3rem;
     font-weight: 400;
     margin-bottom: 5rem;
-    padding: 0 10rem;
 }
 .blogs {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    padding: 0rem 7rem
+    justify-content: space-between;
 }
 .blog {
-    width: 22%;
-    margin-right: 1.5rem;
+    width: 24%;
     background-color: var(--white);
     border-radius: 1rem;
 }
@@ -197,3 +194,42 @@ a {
     color: var(--grayish-blue);
 }
 
+/* footer section styling */
+.footer-section {
+    background-color: var(--dark-blue);
+    padding: 4rem 10rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--grayish-blue);
+}
+.footer-section .left-col {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-basis: 50%;
+}
+.footer-section .left-col a {
+    color: var(--white);
+    text-transform: capitalize;
+    display: block;
+    padding: 0.5rem;
+}
+.footer-section .left-col .one {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.footer-section .left-col .contact {
+    display: flex;
+}
+.footer-section .left-col .contact img {
+    width: 25px;
+}
+.footer-section .right-col {
+    text-align: right;
+}
+.footer-section .right-col span {
+    display: block;
+    margin-top: 3rem;
+}
