--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
     --light-grayish-blue: #f4f5f7;
     --very-light-gray: #f9f9f9;
     --white: hsl(0, 0%, 100%);
-
 }
 *,
 *::before,
@@ -34,6 +33,18 @@ ul {
 a {
     text-decoration: none;
 }
+.request-btn {
+    padding: 1rem 2rem;
+    color: var(--white);
+    background: linear-gradient(90deg, var(--lime-green), var(--bright-cyan));
+    border-radius: 2rem;
+    text-transform: capitalize;
+    font-weight: 700;
+    transition: all 0.3s ease-out;
+}
+.request-btn:hover {
+    opacity: 0.6;
+}
 
 /* navbar styling start */ 
 #nav-bar {
@@ -54,23 +65,32 @@ a {
 }
 .menu li {
     display: inline-block;
+    cursor: pointer;
 }
 .menu li a {
     color: var(--grayish-blue);
-    margin-right: 1rem;
+    padding: 1rem;
+    position: relative;
+}
+.menu li a::after {
+    content: '';
+    position: absolute;
+    background: linear-gradient(90deg, var(--lime-green), var(--bright-cyan));
+    bottom: -18px;
+    left: 0;
+    width: 0%;
+    height: 4px;
+    border-radius: 1rem;
+    transition: all 0.4s ease-out;
+}
+.menu li a:hover::after {
+    width: 100%;
 }
 .menu-btn {
     cursor: pointer;
     display: none;
 }
-.request-btn {
-    padding: 1rem 2rem;
-    color: var(--white);
-    background: linear-gradient(90deg, var(--lime-green), var(--bright-cyan));
-    border-radius: 2rem;
-    text-transform: capitalize;
-    font-weight: 700;
-}
+
 
 /* home section styling */
 .home-section {
@@ -116,7 +136,7 @@ a {
     text-align: left;
 }
 .about-section .intro {
-    padding-right: 29rem;
+    padding-right: 40rem;
 }
 .about-section .intro h2 {
     font-size: 3rem;
@@ -169,6 +189,7 @@ a {
     width: 24%;
     background-color: var(--white);
     border-radius: 1rem;
+    cursor: pointer;
 }
 .blog img {
     width: 100%;
@@ -189,6 +210,11 @@ a {
     font-size: 1.5rem;
     color: var(--dark-blue);
     font-weight: 700;
+    cursor: pointer;
+    transition: all 0.3s ease-out;
+}
+.blog-text h3:hover {
+    color: var(--lime-green);
 }
 .blog-text p {
     color: var(--grayish-blue);
@@ -214,6 +240,10 @@ a {
     text-transform: capitalize;
     display: block;
     padding: 0.5rem;
+    transition: all 0.3s ease-out;
+}
+.footer-section .left-col a:hover {
+    color: var(--lime-green);
 }
 .footer-section .left-col .one {
   display: flex;
@@ -223,8 +253,13 @@ a {
 .footer-section .left-col .contact {
     display: flex;
 }
-.footer-section .left-col .contact img {
-    width: 25px;
+.footer-section .left-col .contact svg {
+    transform: scale(1.3);
+    fill: var(--white);
+    transition: all 0.3s ease-out;
+}
+.footer-section .left-col .contact svg:hover {
+    fill: var(--lime-green);
 }
 .footer-section .right-col {
     text-align: right;
@@ -232,4 +267,12 @@ a {
 .footer-section .right-col span {
     display: block;
     margin-top: 3rem;
+}
+.attribution {
+    text-align: center;
+    background-color: var(--dark-blue);
+    color: var(--grayish-blue);
+}
+.attribution a {
+    color: var(--lime-green);
 }
