--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -3,5 +3,126 @@
 }
 
 @media (max-width: 500px) {
+    /* navbar styling */
+    #nav-bar .container {
+        padding: 2rem;
+    }
+    #nav-bar .container .menu {
+        display: none;
+    }
+    #nav-bar .container .request-btn {
+        display: none;
+    }
+    #nav-bar .container .menu-btn {
+        display: block;
+    }
+    #nav-bar .container .menu-btn img {
+        transform: scale(1.5);
+    }
+
+    /* home-section styling */
+    .home-section {
+        flex-direction: column-reverse;
+        height: 100%;
+    }
+    .home-section .left-col {
+        padding: 0 2rem;
+        text-align: center;
+    }
+    .home-section .left-col h1 {
+        color: var(--dark-blue);
+        font-size: 2.5rem;
+        font-weight: 400;
+        margin-bottom: 2rem;
+    }
+    .home-section .left-col p {
+        color: var(--grayish-blue);
+        margin-bottom: 3rem;
+        font-size: 1.2rem;
+    }
+    .home-section .right-col {
+        background-image: url('/images/bg-intro-mobile.svg');
+        background-repeat: no-repeat;
+        background-position-x: -10px;
+        background-position-y: 20px;
+        background-size: cover;
+        width: 100%;
+        text-align: center;
+    }
+    .home-section .right-col img {
+        width: 95%;
+        transform: translateX(0);
+        transform: translateY(-12%);
+    }
     
+    /* about section styling */
+    .about-section {
+        margin-top: 5rem;
+        padding: 7rem 2rem;
+        text-align: center;
+    } 
+    .about-section .intro {
+        padding-right: 0;
+    }
+    .about-section .intro h2 {
+        font-size: 2.3rem;
+        margin-bottom: 2rem;
+        padding: 0 3rem;
+    }
+    .about-section .intro p {
+        color: var(--grayish-blue);
+        font-size: 1.2rem;
+        margin-bottom: 6rem;
+    }
+    .cards {
+        grid-template-columns: none;
+        grid-row-gap: 3rem;
+    }
+    .cards h3 {
+        font-size: 1.5rem;
+    }
+    .cards p {
+        color: var(--grayish-blue);
+        font-size: 1.2rem;
+    }
+
+    /* blog section styling */
+    .blog-section {
+        padding: 8rem 2rem;
+        text-align: center;
+    } 
+    .blog-section h2 {
+        font-size: 2.3rem;
+    }
+    .blogs {
+        flex-direction: column;
+    }
+    .blog {
+        width: 100%;
+        margin-bottom: 2rem;
+    }
+    .blog-text {
+        text-align: left;
+        
+    }
+
+    /* footer section styling */
+    .footer-section {
+        flex-direction: column;
+        justify-content: center;
+        padding: 4rem 2rem;
+        gap: 3rem;
+    }
+    .footer-section .left-col {
+        flex-direction: column;
+        flex-basis: 100%;
+        text-align: center;
+    }
+    .footer-section .left-col .one {
+        margin-bottom: 2rem;
+    }
+    .footer-section .right-col {
+        text-align: center;
+        flex-basis: 100%;
+    }
 }
