--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -12,6 +12,14 @@
     }
     #nav-bar .container .menu-btn {
         display: block;
+        transform: scale(1.5);
+        cursor: pointer;
+    }
+    #nav-bar .container .menu-btn i {
+        transition: all 0.5s ease-out;
+    }
+    #nav-bar .container .menu-btn i.active:before {
+        content: '\f00d';
     }
     #nav-bar .container .menu-container {
         position: fixed;
@@ -19,25 +27,24 @@
         left: 0;
         width: 100vw;
         height: 100vh;
-        z-index: 99999;
-        display: none;
+        z-index: 9;
+        display: flex;
         justify-content: center;
-        align-items: flex-start;
-        transition: all 0.4s ease-out;
+        transition: all 0.2s ease-out;
+        transform: scale(0) translateY(4.5rem);
     }
     #nav-bar .container .menu-container.active {
-        display: flex;
+        transform: scale(1) translateY(4.5rem);
     }
     #nav-bar .container .menu-container .menu-bg {
         position: fixed;
-        top: 0;
+        top: 0rem;
         left: 0;
         width: 100vw;
         height: 100vh;
         z-index: 99999;
         background: linear-gradient(45deg, var(--light-grayish-blue), var(--dark-blue));
         opacity: 0.8;
-        margin-top: 4.5rem;
     }
     #nav-bar .container .menu-container .menu {
         background-color: var(--white);
@@ -50,7 +57,7 @@
         gap: 1.5rem;
         opacity: 1;
         border-radius: 0.5rem;
-        margin-top: 8rem;
+        transform: translateY(4rem);
         padding: 2rem;
     }
     #nav-bar .container .menu-container .menu li {
@@ -62,9 +69,6 @@
     }
     #nav-bar .container .menu-container .menu li a::after {
         bottom: -4px;
-    }
-    #nav-bar .container .menu-btn i.active::before {
-        content: '\f00d';
     }
     
 
